# DAT278

./: .gitignore  README.md
Lab1/: pre_question.md
Lab1/lab1/: README.md  get_weigths.sh  main.py  results.csv
Lab1/lab1/power_tools/: energy_parser.py
Lab1/lab1/src/cpp/: CMakeLists.txt  gemm.cpp
Lab1/lab1/src/python/: cpp_gemm_test.py  gemm.py  im2col.py  utils.py
Lab2/lab2/: README.md  compile_library.sh  main.py  power-measurement-gpu.txt  power_wrapper.sh  results.csv
Lab2/lab2/power_tools/: power_parser.py
Lab2/lab2/src/cpp/: CMakeLists.txt  gemm.cpp  gemmCuda.cu  gemmCuda.cuh
Lab2/lab2/src/python/: gemm.py  layers.py  utils.py
Lab3/: COO_CSR.md  mplot.ipynb
Lab3/lab3/power_tools/: energy_0.txt  energy_1.txt  energy_parser.py
Lab3/lab3/sparsity/: layer0.txt  layer1.txt  sparsity.py  sparsity_auto.py  sparsity_mem.py
Lab4/: prelab.md  result.md
Lab4/code/: AlexNet_Parallel  AlexNet_Serial  Freq_List.sh  Freq_Scaling_Chalmers.sh  ResNet18_Parallel  ResNet18_Serial
